--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,10 +12,11 @@ website:
     footer: Hecho con [Quarto](https://quarto.org/)
     contents:
       - plantilla.md
+      - otro.md
 
 format:
   html:
-    theme: journal
+    theme: default
     css: styles.css
     toc: true
 
